# QuickRag

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
QuickRag/: QuickRag.py  VectorStore.py  __init__.py
QuickRag/ChatModels/: ChatModels.py
QuickRag/utils/: hash_functions.py
src/: Colbert.py  ColbertRAG.py  QuickRag.py  Reranker.py  VectorStore.py
src/Docling/: DoclingProcessor.py  Loader.py
src/datamodel/: CoolChunks.py  CoolMetadata.py
src/utils/: api_key_verifier.py  box_drawer.py  gemini.py  generate_cool_chunks.py  hash_functions.py  loader.py  metadata_converter.py  spliter.py
tests/: test_loader.py
