[project]
name = "quickrag"
version = "0.1.0"
description = "A simple package to create RAG workflows"
readme = "README.md"
# OPTIMISATION 1: Simplification de la licence (évite le warning de dépréciation)
license = "MIT" 
requires-python = ">=3.12"
dependencies = [
    "pytest>=9.0.1",
    "langchain-huggingface>=1.0.1",
    "chromadb>=1.3.4",
    "langchain>=1.0.7",
    "langchain-chroma>=1.0.0",
    "langchain-community>=0.4.1",
    "sentence-transformers>=5.1.2",
    "transformers>=4.57.1",
    "torch"
]

[build-system]
requires = ["setuptools>=42","wheel"]
build-backend = "setuptools.build_meta"

# OPTIMISATION 2: Configuration pour le 'src-layout'
[tool.setuptools.packages.find]
where = ["src"]